# fpsdk

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.mac.sh  install.win.bat
.github/workflows/: cd.yml  ci.yml
examples/: simple.rs  ui.rs
examples/simple/: gui.rs  main.rs  simple.rs
src/: host.rs  lib.rs  plugin.rs  voice.rs
src/cxx/: add_child_window.h  add_child_window.mm  fp_cplug.cpp  fp_cplug.h  fp_def.h  fp_extra.cpp  fp_plugclass.cpp  fp_plugclass.h  generictransport.h  wrapper.cpp  wrapper.h
src/host/: prompt.rs
src/plugin/: message.rs
