[package]
authors = ["Tonika <tonikasoft@gmail.com>"]
description = "FL Studio SDK"
edition = "2018"
license-file = "LICENSE"
name = "fpsdk"
readme = "README.md"
repository = "https://github.com/tonikasoft/fpsdk"
version = "1.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-apple-darwin", "x86_64-pc-windows-msvc" ]

[dependencies]
bitflags = "1.2"
hresult = "0.0.1"
log = "0.4"
raw-window-handle = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
bincode = "1.2"
chrono = "0.4"
iced = { git = "https://github.com/hecrj/iced.git", features = ["canvas", "tokio", "debug"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"
simplelog = "0.7"

[[example]]
name = "simple"
path = "examples/simple/simple.rs"
crate-type = ["cdylib"]
